# heks

./: .markdownlint.json  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  package.json
.github/workflows/: ci.yml
cmake/: avx_support.cmake  dev-mode.cmake  fuzz-targets.cmake  install-config.cmake  install-rules.cmake  variables.cmake
include/fast_hex/: fast_hex.hpp  fast_hex_inline.hpp
source/: fast_hex.cpp
src/: hex.cc  hex.h
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt  fast_hex_bench.cpp
test/fuzz/: CMakeLists.txt  fuzz_decode.cpp  fuzz_roundtrip.cpp
test/source/: CMakeLists.txt  fast-hex_test.cpp  test_encode_fast.cpp  test_encode_integral.cpp  test_invalid_inputs.cpp  test_valid_inputs.cpp
